<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_favorite"
        android:icon="@drawable/ic_round_favorite_24"
        android:title="@string/favorite"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/main_screen"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_catalog"
        android:icon="@drawable/ic_round_video_library_24"
        android:title="@string/catalog"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_watch_later"
        android:icon="@drawable/ic_baseline_watch_later_24"
        android:title="@string/watch_later"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_round_settings_24"
        android:title="@string/settings"
        app:showAsAction="withText"
        />
</menu>