...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true"
        tools:context=".view.fragments.DetailsFragment">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:fitsSystemWindows="false"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
...

        </androidx.core.widget.NestedScrollView>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/details_fab_favorites"
            android:layout_margin="16dp"
            app:borderWidth="0dp"
            android:backgroundTint="@color/MyColorPrimary"
            app:layout_anchor="@id/app_bar"
            app:layout_anchorGravity="left|bottom"
            app:srcCompat="@drawable/ic_round_favorite_border_24"
...
